# signal4-core

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  logs.md  pyproject.toml  security_improvements_checklist.md
.claude/commands/: add-api-user.md  check-issues.md  collect-podcasts.md
.claude/docs/: backend-logging.md  directory-structure.md  investigation-commands.md  omni-audio-analysis.md
.claude/skills/: api-user-management.md
analysis/: .env.example copy  .gitignore  CLAUDE.md
analysis/methodology/: README.md  __init__.py  config.py  db_queries.py  generate_methodology.py  generate_pdf.sh  latex_templates.py
config/: classification_config.yaml  config.yaml  name_aliases.yaml  name_suggestions.json  name_suggestions.yaml  orchestrator_config.yaml  stitch_config.yaml  webshare_proxies.txt  webshare_proxies_bl.txt  webshare_proxies_old.txt
dashboards/: README.md  name_review.py  system_monitoring.py
dashboards/system_monitoring/: __init__.py  config.py
docs/: pipeline_manager_refactoring_plan.md  similarity_threshold_analysis_2026-01-22.md  worker_setup.md
envs/: README.md
envs/cleanup/: pyproject.toml
envs/convert/: pyproject.toml
envs/diarize/: pyproject.toml
envs/download/: pyproject.toml
envs/mlx-server/: pyproject.toml
envs/stitch/: pyproject.toml
envs/transcribe/: pyproject.toml
meo/: explore-data.txt
meo/us-can/: 01_extract_data.py  02_classify_segments.py  03_plot_timeline.py  04_plot_discourse.R
migrations/: 001_add_hash_fields_all_tables.sql  001_add_speaker_hash_fields.sql  001_consolidate_speaker_tables.sql  001_consolidate_speaker_tables_simple.sql  001_consolidate_speaker_tables_v2.sql  001_enhance_speaker_embeddings.sql  001a_add_columns_only.sql  001b_populate_speakers.sql  001c_populate_transcriptions.sql  001d_populate_segments.sql  001e_add_content_string_to_transcriptions.sql  002_consolidate_speaker_tables.sql  003_cleanup_unified_speakers.sql  004_remove_temporary_speaker_id.sql  add_speaker_canonical_indexes.py  add_speaker_identity_tables.sql  cleanup_canonical_columns.sql  complete_speaker_identity_system.sql  complete_speaker_identity_system_v2.sql  env.py  reset_speaker_identity_tables.sql  reset_speaker_identity_tables_safe.sql
migrations/versions/: 0fe3e6c128fd_add_gin_text_index_embedding_segments.py  1089d5b73562_add_theme_selection_strategy_to_.py  1791194feef3_add_host_aliases_to_channel_host_cache.py  1986110edb9d_drop_cprmv_analysis_table_after_.py  1d0d4d80d505_remove_old_speaker_fields_add_speaker_.py  337b8fb68502_add_main_language_field_to_content_table.py  3ee411528e55_add_hnsw_index_to_embedding_segments.py  3f1d051325c7_create_channels_infrastructure.py  421f7522ab81_add_gender_and_role_to_speaker_.py  4312c63998ca_add_queryable_columns_to_hierarchical_.py  4da7589f1316_add_platform_content_id_unique_.py  553fd172eb1a_change_embedding_alt_to_2000_dimensions.py  55c3ae201693_add_classification_schemas_and_theme_.py  634f20795101_cleanup_speaker_transcriptions_remove_.py  72ff30f1b825_add_alternative_embedding_column_for_.py  745fb16ce098_add_translation_fields_to_alternative_.py  7ed65f02fcbd_migrate_projects_to_array.py  7ee56bdff4b0_add_version_fields_to_embedding_segments.py  7fa146fb537f_add_channel_host_cache_table_for_.py  900e8fbd8e27_make_stitch_version_nullable_and_clear_.py  90c9b6501362_add_cprmv_analysis_table.py  9182dd5f5c4d_add_start_end_date_to_hierarchical_.py  91d90492b963_add_speaker_name_consolidations_table.py  9687d6431ec3_add_alternative_transcriptions_table.py  96c62f34c42d_make_alternative_transcriptions_segment_.py  97787729bcbe_add_diarization_method_to_content.py  99076c7ceb81_add_composite_index_for_reactive_task_.py  99dbb6f846d9_add_embedding_to_speaker_transcriptions.py  a1abbc61329a_merge_heads.py  a1b2c3d4e5f6_add_bookmarks_table.py  a24611f36b04_add_is_stitched_and_is_embedded_flags_.py  a84677564a41_add_meta_data_column_to_podcast_metadata.py  abc123_add_importance_score_to_channels.py  add_analytics_schema.py  add_description_embedding_to_content.py  add_embedding_segments_table.py  add_identification_status_to_speakers.py  add_is_compressed_field.py  add_partial_hnsw_indexes.py  add_processing_state_column.py  (+31 more)
migrations/versions_backup/: 099a4c99bb10_create_speaker_tables.py  107c400c5bcc_merge_speaker_transcription_branch_into_.py  a0d541c69c5c_merge_speaker_embeddings_and_is_.py  a24611f36b04_add_is_stitched_and_is_embedded_flags_.py  add_is_diarized_column.py  add_speaker_embedding_fields.py  add_speaker_metadata.py  add_speaker_transcriptions.py  add_stitch_version.py  c04e112f84f0_add_embedding_vector_to_speakers.py  d15077ab54ee_add_embedding_column_to_speaker_.py  fix_speaker_transcriptions.py
projects/CPRMV/: pipeline_animation.py
scripts/: README.md  cleanup_yt_duplicates.py  deduplicate_youtube_content.py  find_phase2_ad_contamination.py  fix_worker_paths.sh  install_uv_workers.sh  migrate_speaker_transcriptions_to_sentences.py  sync_workers.sh  test_30d_queries.py  test_anchor_cleanup.py  test_carney_query.py  test_expansion_comparison.py  test_google_search_hydration.py  test_grok_web_search_hydration.py  test_llm_generation.py  test_reranking.py  test_targeted_search_hydration.py
scripts/qwen3_omni_captioner/: .gitignore  README.md  analyze_sentences.py  analyze_speaker_turns.py  batch_tone_analysis.py  caption_audio.py  hydrate_sentence_tones.py  hydrate_tones.py  pyproject.toml  run_canadian_tones.py  sentence_tone_dashboard.py  setup.sh  tone_dashboard.py
src/automation/: README.md  background_loops.py  schedule_types.py  scheduled_task_manager.py  task_creation_manager.py  youtube_cache_refresher.py
src/backend/: .env.example  COMPLETE_REVIEW_SUMMARY.md  README.md  SSE_STREAMING.md  TESTING_CONSOLIDATION_PLAN.md  TESTING_GUIDE.md  create_embedding_clusters_infrastructure.sql  requirements.txt  run_server.py  test_sse_streaming_manual.py
src/classification/: db_optimizations.py  embedding_theme_classifier.py  llm_cache.py  memory_optimizations.py  sample_cprmv_queries.py  (+3 more)
tests/: test_quick_summary_workflow.py
(+380 files in other folders)
