[project]
name = "signal4-core"
version = "0.1.0"
description = "Signal4 audio-visual content processing pipeline"
requires-python = "==3.12.11"

# Core dependencies - required for all workers
dependencies = [
    "accelerate>=0.30,<1.0",
    "aiohttp>=3.9,<4.0",
    "alembic>=1.13,<2.0",
    "assemblyai>=0.30,<1.0",
    "asyncssh>=2.14,<3.0",
    "boto3>=1.34,<2.0",
    "browser-cookie3>=0.19,<1.0",
    "deepmultilingualpunctuation>=1.0.1",
    "fake-useragent>=1.5,<2.0",
    "fastapi>=0.115,<1.0",
    "feedparser>=6.0,<7.0",
    "google-api-python-client>=2.100,<3.0",
    "httpx>=0.27,<1.0",
    "huggingface-hub>=0.23,<1.0",
    "isodate>=0.6,<1.0",
    "langchain>=0.2,<1.0",
    "langchain-community>=0.2,<1.0",
    "langchain-core>=0.2,<1.0",
    "minio>=7.2.20",
    "mlx>=0.16,<1.0",
    "mlx-lm>=0.18,<1.0",
    "mlx-whisper>=0.4.3",
    "nltk>=3.9.2",
    "numpy>=1.26,<3.0",
    "openai>=1.0,<2.0",
    "optimum[onnxruntime]>=1.19,<2.0",
    "pandas>=2.0,<3.0",
    "parakeet-mlx>=0.5.0",
    "pgvector>=0.4.2",
    "psutil>=5.9,<7.0",
    "psycopg2-binary>=2.9,<3.0",
    "pyannote-audio>=3.3,<4.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pydub>=0.25,<1.0",
    "python-dateutil>=2.8,<3.0",
    "python-dotenv>=1.0,<2.0",
    "pytz>=2024.1",
    "pyyaml>=6.0,<7.0",
    "requests>=2.31,<3.0",
    "safetensors>=0.4,<1.0",
    "scikit-learn>=1.4,<2.0",
    "scipy>=1.12,<2.0",
    "sentence-transformers>=2.7,<4.0",
    "sentencepiece>=0.2,<1.0",
    "soundfile>=0.12,<1.0",
    "speechbrain>=1.0,<2.0",
    "sqlalchemy>=2.0,<3.0",
    "tokenizers>=0.19,<1.0",
    "torch>=2.5,<2.6",
    "torchaudio>=2.5,<2.6",
    "torchcodec>=0.9.1",
    "torchvision>=0.20,<0.21",
    "tqdm>=4.66,<5.0",
    "transformers>=4.53.0",
    "uvicorn>=0.30,<1.0",
    "webvtt-py>=0.4,<1.0",
    "whisper-normalizer>=0.1,<1.0",
    "yt-dlp>=2024.1,<2026.0",
    # NLP deps required for stitch
    "langdetect>=1.0,<2.0",
    "spacy>=3.7,<4.0",
    "faiss-cpu>=1.13.2",
    "beautifulsoup4>=4.14.3",
    "streamlit>=1.52.2",
    "circlify>=0.15.1",
    "umap-learn>=0.5.9.post2",
    "hdbscan>=0.8.41",
    "email-validator>=2.3.0",
    "bcrypt>=4.0.0",
    "plotly>=5.24.1",
]

[project.optional-dependencies]
# Machine learning extensions
ml = [
    "bertopic>=0.16,<1.0",
    "datasets>=2.18,<3.0",
    "einops>=0.7,<1.0",
    "evaluate>=0.4,<1.0",
    "faiss-cpu>=1.8,<2.0",
    "hdbscan>=0.8,<1.0",
    "lightning>=2.2,<3.0",
    "nemo-toolkit>=1.23,<2.0",
    "optuna>=3.6,<4.0",
    "peft>=0.10,<1.0",
    "pyannote-core>=5.0,<6.0",
    "pyannote-database>=5.1,<6.0",
    "pyannote-metrics>=3.2,<4.0",
    "pyannote-pipeline>=3.0,<4.0",
    "pytorch-lightning>=2.2,<3.0",
    "timm>=0.9,<1.0",
    "torchmetrics>=1.3,<2.0",
    "umap-learn>=0.5,<1.0",
]

# NLP tools
nlp = [
    "flashtext>=2.7,<3.0",
    "inflect>=7.0,<8.0",
    "langdetect>=1.0,<2.0",
    "nltk>=3.8,<4.0",
    "num2words>=0.5,<1.0",
    "rapidfuzz>=3.6,<4.0",
    "regex>=2024.1",
    "spacy>=3.7,<4.0",
    "tiktoken>=0.6,<1.0",
]

# Development and tooling
tools = [
    "altair>=5.2,<6.0",
    "beautifulsoup4>=4.12,<5.0",
    "click>=8.1,<9.0",
    "colorlog>=6.8,<7.0",
    "dash>=2.16,<3.0",
    "fabric>=3.2,<4.0",
    "flask>=3.0,<4.0",
    "gunicorn>=21.2,<23.0",
    "imageio>=2.34,<3.0",
    "ipython>=8.22,<9.0",
    "jinja2>=3.1,<4.0",
    "loguru>=0.7,<1.0",
    "lxml>=5.1,<6.0",
    "matplotlib>=3.8,<4.0",
    "opencv-python-headless>=4.9,<5.0",
    "openpyxl>=3.1,<4.0",
    "paramiko>=3.4,<4.0",
    "pillow>=10.2,<12.0",
    "plotly>=5.19,<6.0",
    "pypdf>=4.1,<5.0",
    "pytest>=9.0,<10.0",
    "pytest-asyncio>=0.23,<2.0",
    "python-docx>=1.1,<2.0",
    "reportlab>=4.1,<5.0",
    "rich>=13.7,<14.0",
    "seaborn>=0.13,<1.0",
    "selenium>=4.18,<5.0",
    "streamlit>=1.31,<2.0",
    "typer>=0.9,<1.0",
    "weasyprint>=61.0,<63.0",
    "werkzeug>=3.0,<4.0",
    "xlsxwriter>=3.2,<4.0",
]

# All optional dependencies combined
all = [
    "signal4-core[ml,nlp,tools]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
# Prefer binary wheels for faster installs
compile-bytecode = true

[tool.uv.sources]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
# Add any custom package sources here if needed
# e.g., private PyPI, git repos, etc.
