[project]
name = "signal4-convert"
version = "0.1.0"
description = "Lightweight environment for audio/video conversion tasks"
requires-python = "==3.12.11"

dependencies = [
    # HTTP (required by logger/ip_utils)
    "aiohttp>=3.9,<4.0",
    "requests>=2.31,<3.0",

    # Audio processing
    "pydub>=0.25,<1.0",
    "numpy>=1.26,<3.0",

    # S3/storage
    "boto3>=1.34,<2.0",
    "minio>=7.2.20",

    # Database
    "sqlalchemy>=2.0,<3.0",
    "psycopg2-binary>=2.9,<3.0",
    "pgvector>=0.4.2",

    # Auth (required by database models)
    "bcrypt>=4.0.0",

    # Data processing (required by database manager)
    "pandas>=2.0,<3.0",

    # Configuration/utilities
    "pyyaml>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
]

[tool.uv]
package = false
compile-bytecode = false
