[project]
name = "signal4-download"
version = "0.1.0"
description = "Lightweight environment for download tasks (YouTube, podcasts, Rumble)"
requires-python = "==3.12.11"

dependencies = [
    # HTTP/networking
    "aiohttp>=3.9,<4.0",
    "httpx>=0.27,<1.0",
    "requests>=2.31,<3.0",

    # Download tools
    "yt-dlp>=2024.1,<2026.0",
    "feedparser>=6.0,<7.0",
    "fake-useragent>=1.5,<2.0",
    "browser-cookie3>=0.19,<1.0",

    # S3/storage
    "boto3>=1.34,<2.0",
    "minio>=7.2.20",

    # Database
    "sqlalchemy>=2.0,<3.0",
    "psycopg2-binary>=2.9,<3.0",
    "pgvector>=0.4.2",

    # Auth (required by database models)
    "bcrypt>=4.0.0",

    # Data processing (required by database manager)
    "pandas>=2.0,<3.0",

    # Configuration/utilities
    "pyyaml>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",

    # Audio duration detection (lightweight)
    "pydub>=0.25,<1.0",
]

[tool.uv]
package = false
compile-bytecode = false
