[project]
name = "signal4-stitch"
version = "0.1.0"
description = "Environment for stitch pipeline (speaker attribution, segmentation)"
requires-python = "==3.12.11"

dependencies = [
    # PyTorch (for embeddings and pyannote)
    "torch>=2.5,<2.6",
    "torchaudio>=2.5,<2.6",

    # PyAnnote (for speaker embeddings)
    "pyannote-audio>=3.3,<4.0",

    # NLP tools
    "spacy>=3.7,<4.0",
    "langdetect>=1.0,<2.0",
    "deepmultilingualpunctuation>=1.0.1",
    "nltk>=3.9.2",

    # Embeddings
    "sentence-transformers>=2.7,<4.0",

    # Transformers/HuggingFace
    "transformers>=4.53.0",
    "huggingface-hub>=0.23,<1.0",
    "tokenizers>=0.19,<1.0",
    "safetensors>=0.4,<1.0",

    # Data processing
    "pandas>=2.0,<3.0",
    "numpy>=1.26,<3.0",
    "scipy>=1.12,<2.0",
    "scikit-learn>=1.4,<2.0",

    # Audio processing
    "soundfile>=0.12,<1.0",

    # HTTP (required by logger/ip_utils)
    "aiohttp>=3.9,<4.0",
    "requests>=2.31,<3.0",

    # Database with vector support
    "sqlalchemy>=2.0,<3.0",
    "psycopg2-binary>=2.9,<3.0",
    "pgvector>=0.4.2",

    # Auth (required by database models)
    "bcrypt>=4.0.0",

    # S3/storage
    "boto3>=1.34,<2.0",
    "minio>=7.2.20",

    # Configuration/utilities
    "pyyaml>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",

    # Progress tracking
    "tqdm>=4.66,<5.0",
]

[tool.uv]
package = false
compile-bytecode = false
